--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "partials/base.html" %}
 
 {% block content %}  
+<script src="https://cdn.tailwindcss.com"></script>
 
     <section class="home">
         <div class="content">
@@ -16,7 +17,7 @@
             </p>
 
             <div class="sb-container">
-                <a href="search" class="search-box">Search Major</a>
+                <a href="search" class="py-3 px-4 rounded-custom text-white shadow-xl bg-blue-600 border-blue-600 hover:bg-white hover:border hover:border-blue-600 hover:text-blue-600 focus:outline-none focus:ring focus:ring-blue-300 transition-all">Search Major</a>
             </div>
 
             <!-- <div class="sb-container">
