--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -11,6 +11,11 @@
     />
     <link rel="stylesheet" href="./static/css/swiper.css" />
     <link rel="stylesheet" href="/static/css/index.css" />
+    <style>
+      .rounded-custom {
+        border-radius: 50px;
+      }
+    </style>
   </head>
 
   <body>
