--- a/templates/output.html
+++ b/templates/output.html
@@ -12,10 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="/static/css/style_output.css" />
-    <!-- <link rel="stylesheet" href="./static/css/swiper.css" /> -->
+    <link rel="stylesheet" href="./static/css/swiper.css" /> 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/static/css/index.css" />
-  </head>
+  </head> 
 
   <body>
     <header class="py-3">
@@ -49,7 +49,7 @@
           id="search-form"
         >
           {% csrf_token %}
-          <div class="">
+          <div class="" style="margin-top:50px;">
             <input
               type="text"
               value="{{ query }}"
@@ -58,10 +58,10 @@
             />
             <button
               type="submit"
-              class="py-2 px-3 rounded-xl text-white shadow-xl bg-blue-600 hover:bg-blue-700 active:bg-blue-700 focus:outline-none focus:ring focus:ring-blue-300 transition-all"
-              id="version"
+              class="py-3 px-4 rounded-custom text-white shadow-xl bg-blue-600 border-blue-600 hover:bg-white hover:border hover:border-blue-600 hover:text-blue-600 focus:outline-none focus:ring focus:ring-blue-300 transition-all"
+              id="version" 
             >
-              see new version
+              See New Version
             </button>
             <span class="last_up">*Last Updated {{date_generated}}</span>
           </div>
@@ -82,10 +82,10 @@
                 type="text"
                 value="{{termObj.term}}_{{termObj.score}}"
               />
-              <div class="kotak_o">
+              <div class="kotak_o" onclick="toggleDropdown(this)">
                 <label
                   for="acc{{ forloop.counter }}"
-                  class="flex flex-row justify-between items-center h-[60px] pe-3"
+                  class="cursor flex flex-row justify-between items-center h-[60px] pe-3"
                 >
                   <span class="skill">{{termObj.term}}</span>
                   <span class="no_skill">{{ forloop.counter }}</span>
@@ -100,6 +100,28 @@
         </div>
       </div>
     </div>
+
+    <script>
+      function toggleDropdown(element) {
+        const tab = element.closest('.tab_o');
+        const allTabs = document.querySelectorAll('.tab_o');
+ 
+        allTabs.forEach((t) => {
+          if (t !== tab) {
+            t.classList.remove('open');
+          }
+        });
+  
+        tab.classList.toggle('open');
+  
+        document.addEventListener('click', function(event) {
+          if (!element.contains(event.target) && !tab.contains(event.target)) {
+            tab.classList.remove('open');
+          }
+        });
+      }
+    </script>
+
   </body>
 </html>
 
