--- a/templates/faq.html
+++ b/templates/faq.html
@@ -10,35 +10,42 @@
                 <div class="part">
                     <div class="box1">
                         <h2>Q</h2>
-                        <P>Bagaimana cara Saya dapat menggunakan website ini?</P>
+                        <P>How can I use this website?</P>
                     </div>
                     <div class="box2">
                         <h2>A</h2>
-                        <P>Mekanisme penggunaan website SEAREQ dapat digunakan dengan 
-                            memasukkan jurusan yang Anda inginkan. Kemudian Sistem Kami akan 
-                            menampilkan requirements jurusan terinput yang 
-                            relevan dengan Industri saat ini</P>
+                        <P>
+                            The mechanism for using the SEAREQ website can be used by
+                            entering the major you want. Then Our System will
+                            displays the requirements for the input department
+                            relevant to today's industry job field
+                        </P>
                     </div>
                 </div>
                 <div class="part">
                     <div class="box1">
                         <h2>Q</h2>
-                        <P>Apakah semua jurusan bisa dilakukan pencarian?</P>
+                        <P>Can all major be searched?</P>
                     </div>
                     <div class="box2">
                         <h2>A</h2>
-                        <P>Tentu saja, Ayo temukan kebutuhan yang perlu kamu asah sedini mungkin!</P>
+                        <P>Of course, Let's find what you need to learn as early as possible
+                        </P>
                     </div>
                 </div>
                 <div class="part">
                     <div class="box1">
                         <h2>Q</h2>
-                        <P>Apakah data yang ditampilkan up-to-date dengan kebutuhan saat ini?</P>
+                        <P>
+                            Is the data displayed up to date with the current needs?
+                            ?</P>
                     </div>
 
                     <div class="box2">
                         <h2>A</h2>
-                        <P>SEAREQ pasti dan akan terus berkomitmen untuk melakukan pembaharuan bagi setiap jurusannya.</P>
+                        <P>
+                            SEAREQ will always be committed to update each major that being displayed. 
+                        </P>
                     </div>
                 </div>
                 </div>
